dung document.write

--- a/Thuc hanh.html
+++ b/Thuc hanh.html
@@ -6,11 +6,10 @@
     <title>Thuc Hanh Buoi 9</title>
 </head>
 <body>
-    <div id="messageDiv"></div>
-<button type="button" onclick="showMessage();">Click Me!</button>
+    <button type="button" onclick="showMessage();">Click Me!</button>
 <script>
  function showMessage(){
-     document.getElementById('messageDiv').innerHTML = 'Xin chào!';
+     document.write('Xin chào!');
  }
 </script>
 
