--- a/Calculator.html
+++ b/Calculator.html
@@ -9,12 +9,12 @@
 
 <body>
     <h1>Calculator</h1>
-    <input type="text" style="width: 100;" id="sothunhat">
-    <input type="text" style="width: 100;" id="sothuhai"><br><br>
-    <input type="button" id="cong" onclick="tong()" style="width: 60px" value="Cộng(+)"></input>
-    <input type="button" id="tru" onclick="hieu()" style="width: 60px" value="Trừ(-)"></input>
-    <input type="button" id="nhan" onclick="tich()" style="width: 60px" value="Nhân(x)"></input>
-    <input type="button" id="chia" onclick="thuong()" style="width: 60px" value="Chia(/)"></input><br>
+    <input type="text" style="width: 80px;" id="sothunhat">
+    <input type="text" style="width: 80px;" id="sothuhai"><br><br>
+    <input type="button" onclick="tong()" style="width: 60px" value="Cộng(+)"></input>
+    <input type="button" onclick="hieu()" style="width: 60px" value="Trừ(-)"></input>
+    <input type="button" onclick="tich()" style="width: 60px" value="Nhân(x)"></input>
+    <input type="button" onclick="thuong()" style="width: 60px" value="Chia(/)"></input><br>
     <p id="ketqua"></p>
 
     <script>        
