Display chua duoc

--- a/Calculator nang cao.html
+++ b/Calculator nang cao.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator Nâng Cao</title>
     <style>
         table,
         tr,
         td {
             border: 1px solid black;
-
         }
     </style>
 </head>
@@ -18,10 +17,11 @@
 <body>
     <table>
         <tr>
-            <td colspan="4"><input type="text" style="width: 220px; text-align: right;" id="manhinh" value="0"></td>
+            <td colspan="4"><input type="text" style="width: 220px; text-align: right; height: 30px;" id="display" value="0"></td>
         </tr>
         <tr>
-            <td><input type="button" id="mongoac" value="(" style="width: 50px; background-color: rgb(177, 177, 177);" onclick="mongoac()">
+            <td><input type="button" id="mongoac" value="(" style="width: 50px; background-color: rgb(177, 177, 177);"
+                    onclick="">
             </td>
             <td><input type="button" id="dongngoac" value=")"
                     style="width: 50px; background-color: rgb(177, 177, 177);"></td>
@@ -33,13 +33,14 @@
             <td><input type="button" id="so1" value="1" style="width: 50px;"></td>
             <td><input type="button" id="so2" value="2" style="width: 50px;"></td>
             <td><input type="button" id="so3" value="3" style="width: 50px;"></td>
-            <td><input type="button" id="tru" value="-" style="width: 50px; background-color: rgb(177, 177, 177);"></td>
+            <td><input type="button" id="cong" value="+" style="width: 50px; background-color: rgb(177, 177, 177);">
+            </td>
         </tr>
         <tr>
             <td><input type="button" id="so4" value="4" style="width: 50px;"></td>
             <td><input type="button" id="so5" value="5" style="width: 50px;"></td>
             <td><input type="button" id="so6" value="6" style="width: 50px;"></td>
-            <td><input type="button" id="cong" value="+" style="width: 50px; background-color: rgb(177, 177, 177);">
+            <td><input type="button" id="tru" value="-" style="width: 50px; background-color: rgb(177, 177, 177);">
             </td>
         </tr>
         <tr>
@@ -56,7 +57,9 @@
             <td><input type="button" id="chia" value="/" style="width: 50px; background-color: rgb(177, 177, 177);">
             </td>
         </tr>
-        <script src="calculator.js"></script>
+        <script>
+
+        </script>
     </table>
 </body>
 
