demo script thu nut bam so1

--- a/Calculator nang cao.html
+++ b/Calculator nang cao.html
@@ -58,7 +58,10 @@
             </td>
         </tr>
         <script>
-
+            document.getElementById("so1").addEventListener("click",function(){
+                let giatri = 1
+                document.getElementById("display").innerHTML = giatri
+            })
         </script>
     </table>
 </body>
